--- a/packages/@dopt/please/package.json
+++ b/packages/@dopt/please/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@dopt/please-parser",
-  "version": "0.0.0",
+  "name": "@dopt/please",
+  "version": "1.0.0",
   "description": "",
   "homepage": "https://github.com/dopt/please",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dopt/please.git",
-    "directory": "packages/@dopt/please-parser"
+    "url": "https://github.com/dopt/please.git"
   },
   "license": "MIT",
   "main": "./dist/cjs/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
   "type": "module",
+  "bin": "./cli.js",
   "exports": {
     ".": {
       "require": "./dist/cjs/index.cjs.js",
@@ -22,22 +22,23 @@
   },
   "scripts": {
     "👇required package scripts": "",
-    "build": "pnpm run generate-parser; pkg-build",
+    "build": "pkg-build",
     "clean": "pkg-clean",
     "dev": "pkg-build -s",
     "format": "pkg-format",
     "formatcheck": "pkg-format -c",
     "lint": "pkg-lint",
-    "test": "vitest",
+    "test": "echo \"@dopt/please has no unit tests\"; exit 0;",
     "typecheck": "tsc --noEmit",
     "☝️ required package scripts": "",
-    "generate-parser": "node ./generate-parser.cjs",
-    "prepublishOnly": "pnpm -w exec turbo run build --filter=\"@dopt/please-parser\""
+    "prepublishOnly": "pnpm -w exec turbo run build --filter=\"@dopt/please\""
   },
   "files": [
+    "cli.js",
     "dist"
   ],
   "dependencies": {
+    "@dopt/please-function": "workspace:*",
     "chalk": "4.1.2",
     "citty": "0.1.5"
   },
@@ -48,9 +49,6 @@
     "@dopt/pkg-format": "0.0.0",
     "@dopt/pkg-lint": "1.0.0",
     "@types/node": "18.16.18",
-    "peggy": "2.0.1",
-    "ts-pegjs": "4.2.1",
-    "typescript": "5.1.6",
-    "vitest": "^1.0.4"
+    "typescript": "5.1.6"
   }
 }
