refactor(@dopt/please): finish tying the new packages together

--- a/packages/@dopt/please/package.json
+++ b/packages/@dopt/please/package.json
@@ -39,6 +39,7 @@
   ],
   "dependencies": {
     "@dopt/please-function": "workspace:*",
+    "@dopt/please-parser": "workspace:*",
     "chalk": "4.1.2",
     "citty": "0.1.5"
   },
