--- a/packages/@dopt/please-parser/package.json
+++ b/packages/@dopt/please-parser/package.json
@@ -48,6 +48,7 @@
     "@dopt/pkg-format": "0.0.0",
     "@dopt/pkg-lint": "1.0.0",
     "@types/node": "18.16.18",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
     "peggy": "2.0.1",
     "ts-pegjs": "4.2.1",
     "typescript": "5.1.6",
