--- a/packages/@dopt/please/package.json
+++ b/packages/@dopt/please/package.json
@@ -50,6 +50,7 @@
     "@dopt/pkg-format": "0.0.0",
     "@dopt/pkg-lint": "1.0.0",
     "@types/node": "18.16.18",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
     "typescript": "5.1.6"
   }
 }
