ci: add typechecking, linting, testing to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,15 @@ jobs:
       - name: Build
         run: |
           pnpm build
+
+      - name: Lint
+        run: |
+          pnpm lint
+
+      - name: Typecheck
+        run: |
+          pnpm typecheck
+
+      - name: Test
+        run: |
+          pnpm test
