--- a/packages/@dopt/please-function/package.json
+++ b/packages/@dopt/please-function/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "type": "module",
+  "types": "./dist/index.d.mts",
   "exports": {
     "import": {
       "types": "./dist/index.d.mts",
@@ -47,6 +48,7 @@
     "@pkg-tools/lint": "^0.0.6",
     "@types/micromatch": "^4.0.2",
     "@types/node": "18.16.18",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
     "publint": "^0.2.7",
     "typescript": "5.1.6",
     "vitest": "^1.0.4"
