--- a/packages/@dopt/please/package.json
+++ b/packages/@dopt/please/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "type": "module",
   "bin": "./cli.js",
+  "types": "./dist/index.d.mts",
   "exports": {
     "import": {
       "types": "./dist/index.d.mts",
@@ -47,6 +48,7 @@
     "@pkg-tools/format": "^0.0.6",
     "@pkg-tools/lint": "^0.0.6",
     "@types/node": "18.16.18",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
     "publint": "^0.2.7",
     "typescript": "5.1.6"
   }
