--- a/packages/@dopt/please-function/tsconfig.json
+++ b/packages/@dopt/please-function/tsconfig.json
@@ -7,6 +7,6 @@
     "outDir": "dist",
     "rootDir": "."
   },
-  "exclude": ["node_modules", "dist", "build.config.ts"],
+  "exclude": ["node_modules", "dist"],
   "include": ["**/*.ts", "**/*.tsx"]
 }
