--- a/packages/@dopt/please-parser/package.json
+++ b/packages/@dopt/please-parser/package.json
@@ -40,11 +40,11 @@
   },
   "devDependencies": {
     "@dopt/config": "1.1.0",
-    "@pkg-tools/build": "^0.0.6",
-    "@pkg-tools/clean": "^0.0.6",
-    "@pkg-tools/config": "^0.0.6",
-    "@pkg-tools/format": "^0.0.6",
-    "@pkg-tools/lint": "^0.0.6",
+    "@pkg-tools/build": "0.1.1",
+    "@pkg-tools/clean": "0.1.1",
+    "@pkg-tools/config": "0.1.0",
+    "@pkg-tools/format": "0.1.1",
+    "@pkg-tools/lint": "0.1.1",
     "@types/node": "18.16.18",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "peggy": "2.0.1",
